--- a/Winter Progress Report/Progress Report.tex
+++ b/Winter Progress Report/Progress Report.tex
@@ -96,10 +96,13 @@ At the time of our visit, our group's plan was to animate all portions of the Ap
     \item When the Operator is ready to end the animation, they will begin a scripted ending where Neil gets back in the Lunar Module and ascends from the surface, show the flight path again, show the Saturn V Rocket, audio snippets of relevant quotes, and then video of the splashdown on Earth, finishing with credits. 
 \end{list}
 
-Our group will implement this animation in OpenGL, primarily for use at the Engineering Expo. Unfortunately, this will not work directly with the DigitalSky system at OMSI. Instead, we will need to translate our animation into a unique scripting language for use in the planetarium. This will be good because we will be able to make full use of the software's capabilities, but could result in some complications when trying to convert our project to that language. Mike Bailey has been, and is currently in contact with Jim Todd and a contact with SkySkan to find the best ways to complete this conversion.  
+Our group will implement this animation in OpenGL. Unfortunately, we recently discovered this will not work directly with the DigitalSky system at OMSI. Instead, we will need to translate our animation into a unique scripting language for use in the planetarium. This will be good because we will be able to make full use of the software's capabilities, but could result in some complications when trying to convert our project to that language. Mike Bailey has been, and is currently in contact with Jim Todd and a contact with SkySkan to find the best ways to complete this conversion. Converting our animation into the scripting language has been added as a stretch goal for our project.
 
 \section{Current Progress}
-As of today, February 18th, our team has created a program in OpenGL that has all objects in the scene, fully textured, including the Saturn V Rocket, Lunar Module, astronaut, American flag, Earth, Sun, Moon, landing zone, and a star map background. All objects have been placed in their starting positions and we have (NUMBER) viewpoints highlighting various features.
+As of today, February 18th, our team has created a program in OpenGL that has all objects in the scene, fully textured, including the Saturn V Rocket, Lunar Module, astronaut, Earth, Sun, Moon, landing zone, and a star map background. All objects have been placed in their starting positions and we have six viewpoints highlighting various features.
+
+\section{To Do}
+In order to have our beta completed, 
 
 %An infinite point light has been placed at the Sun to illuminate the scene. 
 %We have loaded one video...
