--- a/Winter Progress Report/Progress Report.tex
+++ b/Winter Progress Report/Progress Report.tex
@@ -116,7 +116,7 @@ In order to have our beta completed,
 \section{Problems and Solutions}
 One of the problems our group has encountered obtaining quality 3D objects for our scene. Luckily, NASA has a Github that contains .stl files for 3D objects from most of their missions. We obtained the models for the Saturn V, lunar module, astronaut, and lunar surface. However, these models were not to scale, so our group is continuing to adjust their sizes so they are more accurate. Another problem our group has encountered was implementing audio. The API we were planning on using uses a heavily deprecated library and the functions to play audio were not working. Instead, our group is currently using a Windows function to play audio files, making it so only computers with Windows OS can play audio. We will need to test our program on OMSI's planetarium computer to see if the audio files can be played. 
 
-Implementing historical videos was also a problem for our group. We met with Mike Bailey to discuss how we might achieve this. He told us how every frame of a video can be saved in memory and placed onto a quadrilateral object as an image. These images would upload so many frames per second in order to play the entire video. This technique does not play the audio of the video, however, so our group will have to sync the audio file with the video that is playing. A significant problem our group encountered was having SkySkan, the company that created the planetarium software, inform us that OpenGL might not be compatible with their software. Our group decided that creating an OpenGL animation will still be a requirement while making the video compatible with the planetarium software a stretch goal.  
+Implementing historical videos was also a problem for our group. We met with Mike Bailey to discuss how we might achieve this. He told us how every frame of a video can be saved in memory and placed onto a quadrilateral object as an image. These images would upload so many frames per second in order to play the entire video. This technique does not play the audio of the video, however, so our group will have to sync the audio file with the video that is playing. A significant problem our group encountered was having SkySkan, the company that created the planetarium software, inform us that OpenGL might not be compatible with their software. Our group decided that creating an OpenGL animation will still be a requirement while making the video compatible with the planetarium software a stretch goal. Our stretch goal will be to use the scripting language to implement our OpenGL program. 
 %Where to get good models
 %How to include video
 %How to design for expo AND OMSI
