--- a/Winter Progress Report/Progress Report.tex
+++ b/Winter Progress Report/Progress Report.tex
@@ -159,6 +159,7 @@ Implementing historical videos was also a problem for our group. We met with Mik
 
 
 \section{Conclusion}
+With a solid base to work with, we are finally in the position to make some of the vital changes to bring the project to life. Despite the change in main goals, the roadmap to our finished project is the same. For the goals going forward, we must get the animations in their place and working, have all aesthetics changes set in stone and all story telling additions finished. Post launch of our project after the Engineering Expo is when we will focus on the final stages of piping in our animation to OMSI's planetarium, with spring term being dedicated to converting our animation into their in-house scripting language. 
 
 \begin{wrapfigure}{l}{0.45\textwidth}
     \includegraphics[width=0.4\textwidth]{View6.eps}
