Added a little about scaling/placing our objects

--- a/Beta - Winter '19/Progress Report/Beta Progress Report.tex
+++ b/Beta - Winter '19/Progress Report/Beta Progress Report.tex
@@ -119,6 +119,8 @@ As of March 18th, our team has created a beta-level program in OpenGL that has t
 Currently, there are seven viewpoints highlighting different views of the animation. These viewpoints include a diagram of the Apollo 11 flight path, Tranquility Base on the Moon, the Lunar module, flag, and astronaut, a view of the Earth from the Moon, and more. These views are bound to the number keys on a keyboard to change between them. Creating these views includes determining the position of the 'eye', where the eye should look, and the orientation of the eye, all in XYZ coordinates. 
 
 In addition to the static views above, some views move throughout the scene. Panning across the lunar landscape and watching the Lunar Module descend to the surface are also included, with more being worked on now. These have been made using key-frame animation, where the eye-position moves between determined points in the scene. Also included with some views are audio snippets of notable quotes during the mission. These clips were chosen because they were either recognisable, or were directly related to the view. 
+
+Our team scaled the lunar module, lunar surface, astronaut, and flag to make the scene look more realistic. The location of Tranquility Base is also marked on the Moon in a viewpoint to add context about where the Apollo 11 crew landed on the moon. We also reviewed historical photographs of the moon landing in order place the lunar module and American flag objects in the correct locations.
 %Flight path
 %Placement of objects
 %lighting - Dean, you probably can write the best for this part
