my changes explaining shaders and lighting

--- a/Beta - Winter '19/Progress Report/Beta Progress Report.tex
+++ b/Beta - Winter '19/Progress Report/Beta Progress Report.tex
@@ -124,7 +124,11 @@ Our team scaled the lunar module, lunar surface, astronaut, and flag to make the
 %Flight path
 %Placement of objects
 %lighting - Dean, you probably can write the best for this part
+
+The Lunar Module, Saturn 5, the Astronaut, and the Lunar Surface are the only objects that are truly interacting with lighting within the scene. With the use of fragment and vertex shaders, we have implemented per-fragment lighting, which gives us the most accurate and best looking lighting, and allows us to have more control over the parameters of lighting. These parameters are split up into the three parts of computer generated lighting; Ambient, Diffuse, and Specular. These all divulge into more parameters which allow us to fine tune each part of the lighting to get the best picture, these include, lighting exponent, lighting color, specular exponent, and dissolve (opacity). Most of these parameters are retrieved by the mtl parser that sifts through the mtl files that accompanies our obj files and are separated and stored into variables within our OpenGL code, which we then pass to the shaders in the form of uniform variables where they will be used in the computation of the lighting. Understanding the differences between the three parts of the lighting contributed heavily in creating the best picture. Ambient light is the light that enters an area and bounces several times before lighting the object, think of this part as the general color that the object sends to your eyes. Diffuse light is the direct light that hits the object, which is dependant on the incident angle, this is the light that darkens or lightens the object based off of the location of the light and the object. Finally, specular light is the colored highlight (usually white) reflection seen on smooth, shiny objects, which is dependant on the direction of the light, the surface normal, and the viewer location. 
 %shaders on the Earth - Dean, you again XD
+
+Besides the shaders that controlled fragment lighting, there were other shaders that handled other instances of simulated lighting. The Earth has two hemispheres, both of which are represented by the day and night side separated by the horizon, which it transitions smoothly between the two. This is especially important to point out as when the astronauts were on the moon, a quarter of the Earth was engulfed in darkness while the other was in day time. Luckily, we had three high resolution textures of the light and dark side of Earth, and a cloud texture. The idea was to mix these three textures together to get an accurate representation of Earth, and it worked. We used a fragment and vertex shader, albiet the vertex shader didn't do much, we just needed the texel coordinates (STP coordinates) and the normal to do what we needed to do, most of which was manipulation of RGB values in the fragment shader. We retrieved the normal and the texel coordinates via out variables, and applied the obligatory matrice transformations to the vertex and proceeded to work in the fragment shader. The understanding of the dot product and it's properties played a big role in getting this feature to work. The dot product is a arithmatic equation between two vectors that produces a scalar, lets call these two vectors A and B. The scalar tells us how much vector A is going in the direction of vector B. Knowing this property, you can derive several more properties that are the foundation that made this feature work. When the two vectors are unitized, which makes their magnitude 1 unit but they keep their direction, and they're parallel, the resulting scalar will be equal to one. The reason being is the dot product also equal to the product of their magnitudes multiplied by the cosine of the angle between them, if both of they're magnitudes are one unit and the angle between them are zero, making the cosine of zero degrees 1 as well, the result will be one. Similarly, if they are perpendicular, the dot product of the two vectors will be zero because the cosine of 90 degrees is zero, and you can say the same when they are pointing in the opposite directions, making the result negative one. Knowing this tells us which faces of the Earth is facing towards the light and away from it, and everything in between. Take the vector of the object to the light, and the normal of the current vector being evaluated, and we can tell the fragment shader what RGB values from which texture to put at that point, and if it falls in between a range around the horizon, we transition between the two textures using the smoothstep() GLSL function. At the end, we just mix the RGB values of the cloud texture and the resultant RGB values, and we get a nice, accurate looking Earth. We do something similar for the moon, but instead we use the one texture of the moon, but we darken one side via linear interpolation. 
 
 \section{To Do}
 
